Test/Reconstruction/Arith/ArithMulSign.expected
Test/Reconstruction/Arith/ArithMulSign.lean:24:2: error: type mismatch
  _uniq.6012
has type
  a < Int.ofNat 0 → b < Rat.ofInt (Int.ofNat 0) → Rat.ofInt (Pow.pow a 3) * Pow.pow b 3 > 0 : Prop
but is expected to have type
  a < 0 → b < 0 → ↑a ^ 3 * b ^ 3 > 0 : Prop
Test/Reconstruction/Arith/ArithMulSign.lean:33:2: error: type mismatch
  _uniq.10504
has type
  a < Int.ofNat 0 →
    b > Rat.ofInt (Int.ofNat 0) →
      c < Rat.ofInt (Int.ofNat 0) →
        d > Rat.ofInt (Int.ofNat 0) →
          e < Int.ofNat 0 →
            Mul.mul (Mul.mul (Mul.mul (Rat.ofInt a) (Pow.pow b 2)) (Pow.pow c 2)) (Pow.pow d 4) *
                Rat.ofInt (Pow.pow e 5) >
              0 : Prop
but is expected to have type
  a < 0 → b > 0 → c < 0 → d > 0 → e < 0 → ↑a * b ^ 2 * c ^ 2 * d ^ 4 * ↑e ^ 5 > 0 : Prop
